--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,8 @@ Gemfile.lock
 public/uploads/tmp/
 test/
 public/uploads/safe/photo/
+public/uploads/user/
+
 
 # Ignore all logfiles and tempfiles.
 /log
